--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -111,7 +111,7 @@
         app:srcCompat="@drawable/ketchup_logo" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/devButton"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="20dp"
